--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.timer-container {
+  text-align: center;
+  padding: 20px;
+}
+
+.timer {
+  font-size: 24px;
+}
+
+.sum-container {
+  text-align: center;
+  padding: 20px;
+}
+
+input {
+  padding: 5px;
+  margin: 5px;
+}
+
